src/inject.css
.HeurekaBox {
  background: #fff;
  box-shadow: 0px 10px 20px rgba(126, 80, 211, 0.48);
  margin: 32px 0;
}

.HeurekaBox__Header {
  height: 24px;
  background: #7e50d3;
  padding: 16px;
  color: #fff;
  font-family: Arial;
  font-style: normal;
  font-weight: bold;
  font-size: 16px;
  line-height: 24px;
}

.HeurekaBox__Header svg {
  float: right;
}

.HeurekaBox__NotFound {
  padding: 16px;
  font-family: Arial;
  font-style: normal;
  font-weight: bold;
  font-size: 16px;
  line-height: 18px;
  color: #404040;
}

.HeurekaBox__ProductsList {
}

.HeurekaBox__ProductsList__Item {
  display: block;
  padding: 16px;
  background-color: #fff;
  text-decoration: none;
  display: flex;
  flex-direction: row;
  align-items: center;
  border-bottom: 1px solid #ebebeb;
}

.HeurekaBox__ProductsList__Item:hover {
  background-color: #f4f4f4;
}

.HeurekaBox__ProductImage {
  width: 48px;
  height: 48px;
  margin-right: 8px;
}

.HeurekaBox__ProductInfoColumn {
  flex: 1;
  text-decoration: none;
}

.HeurekaBox__ProductName {
  font-family: Arial;
  font-style: normal;
  font-weight: bold;
  font-size: 16px;
  line-height: 18px;

  color: #000;
  margin: 0 0 8px 0;
}

.HeurekaBox__ProductCategory {
  font-family: Arial;
  font-style: normal;
  font-weight: normal;
  font-size: 14px;
  line-height: 16px;

  color: #595959;
  margin: 0;
}

.HeurekaBox__ProductPrice {
  font-family: Arial;
  font-style: normal;
  font-weight: bold;
  font-size: 16px;
  line-height: 18px;
  text-align: right;

  color: #595959;
}

.HeurekaBox__Footer {
  padding: 8px 16px;
  text-align: right;
  color: #595959;
}

